# vague

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENCE
.devcontainer/: Dockerfile  devcontainer.json
include/vague/: arbitrary_function.hpp  differentiable_function.hpp  estimate.hpp  linear_function.hpp  state_estimator.hpp  state_spaces.hpp  unscented_transform.hpp  utility.hpp
test/: .clang-tidy  benchmark.cpp  example_bin.cpp  sample.cpp  test_angle_statistics.cpp  test_arbitrary_function.cpp  test_differentiable_function.cpp  test_helpers.hpp  test_linear_function.cpp  test_state_estimator.cpp  utility.cpp
